Added import for adding of accessways with parking slot distances
